# test_task_PTMK

./: .gitignore  README.md
.github/workflows/: integration.yml
app/: pyproject.toml
app/app/: cli.py  dal.py  logger.py  main.py  service.py
app/tests/: test_dal.py  test_service.py
initdb/: init.sql
