[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
ruff = "^0.7.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sqlalchemy = "^0.2.1"
pytest-cov = "^5.0.0"
coverage = "^7.6.3"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
app = "app.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=app --cov-report term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "app/cli.py",
    ]

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"

[lint]
ignore = ["E501"]